--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Aquí ponemos tu logo como icono de la pestaña/app -->
+    <link rel="icon" href="https://i.ibb.co/99Fcyfcj/LOGO-INPERU-PRODUCCIONES.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head><script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- ESTE ES EL NOMBRE QUE SALE AL INSTALAR -->
+    <title>INPERU PRODUCCIONES</title>
+    
+    <!-- No borramos esto, es la pintura de la app -->
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
